Fix letter-spacing on titles

--- a/style/main.css
+++ b/style/main.css
@@ -23,7 +23,6 @@ a:hover {
 }
 h1,h2,h3,h4,h5,h6,nav {
   font-family: 'Poppins', sans-serif;
-  letter-spacing: -1.5px;
 }
 h1 {
   font-size: 2rem;
